recuperação senha final,responsividade

--- a/assets/pages/recuperarSenha.html
+++ b/assets/pages/recuperarSenha.html
@@ -37,10 +37,13 @@
             <h1>Esqueceu a senha?</h1>
             <p>Perdeu o acesso a sua conta?</p>
 
+            <img class="bg-pic-form" src="../img/bg/bg-pinkflamingos.jpg">
+            <p class="text-pic-form">"There is right, and there is wrong. l have never been wrong, Mr. Goldstein."</p>
+
             <form action="" id="formRecuperacao">
 
                 <div id="inputField">
-                    <label for="email">Digite seu e-mail para enviarmos as instruções de refediniçao de senha</label>
+                    <label for="email">Digite seu e-mail para enviarmos as instruções de redefiniçao de senha<br> e volte a desfrutar dos melhores<br> filmes kitsch da sétima arte</label>
                     <input type="email" id="email" name="email" placeholder="Digite seu email aqui"required>
                 </div>
 
