--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                         <div class="accordion-body"><strong>Escondido, de preferência.</strong> Nem todo mundo está
                             preparado para apreciar essas obras-primas e você pode sofrer olhares julgadores. Pegue
                             muita pipoca e refri para a sua experiência de guilty pleasure ser completa &#127871; <br> E quanto a
-                            telas, é compatível com todas.</div>
+                            telas, é compatível com todas, podendo ultilizar até 4 ao mesmo tempo</div>
                     </div>
                 </div>
                 <!--<div class="accordion accordion-flush" id="accordionFlushExample">
