feito responsividade do carousel e footer

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 offset-3">
+                <div class="col-md-3">
                     <form class="form">
                         <div class="d-flex flex-column">
                             <input id="newsletter1" type="text" class="form-control formCadastrar"
@@ -508,7 +508,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="col-md-2 offset-1">
+                <div class="col-md-2 ">
                     <p>Dúvidas? Ligue 4002-8922</p>
                     <ul class="nav flex-column">
                         <li class="nav-item mb-2"><a href="./assets/pages/equipe.html" class="nav-link p-0">Equipe</a>
