versao final recuperar senha

--- a/assets/pages/recuperarSenha.html
+++ b/assets/pages/recuperarSenha.html
@@ -65,15 +65,12 @@
         <p>Duvidas? Ligue: 4002-8922</p>
 
         <ul>
-            <li><a href="./equipe.html">
-                    <p>Equipe</p>
-                </a></li>
-            <li>
-                <p>Fale conosco</p>
-            </li>
-            <li>
-                <p>Termos de uso</p>
-            </li>
+           
+            <li><a href="./equipe.html"><p>Equipe</p></a></li>
+            <li><a href="http://comercial.recordtv.com.br/programacao-nacional/fala-que-eu-te-escuto/"
+                target="_blank"><p>Fale conosco</p></a></li>
+            <li><a href="https://help.netflix.com/pt/legal/termsofuse/"
+                target="_blank"><p>Termos de uso</p></a></li>
         </ul>
 
     </footer>
