Atualizando os titles das páginas html

--- a/assets/pages/pesquisaFilmes.html
+++ b/assets/pages/pesquisaFilmes.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/pesquisaFilmes.css  ">
 
 
-    <title>ResiliaFlix</title>
+    <title>Busca | ResiliaFlix</title>
 </head>
 
 <body>
