--- a/assets/pages/cadastrarUsuario.html
+++ b/assets/pages/cadastrarUsuario.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../css/components.css">
   <link rel="stylesheet" href="../css/cadastrarUsuario.css">
   <link rel="stylesheet" href="../css/login.css">
-  <title>ResiliaFlix</title>
+  <title>Cadastrar | ResiliaFlix</title>
 </head>
 
 <body>
