--- a/assets/pages/pesquisaFilmes.html
+++ b/assets/pages/pesquisaFilmes.html
@@ -13,15 +13,14 @@
 </head>
 
 <body>
+
     <header>
-
-
-
         <nav>
             <a href="../../index.html">RESILIAFLIX</a>
         </nav>
 
     </header>
+
     <div id="content">
         <h1>Digite o seu filme:</h1>
 
@@ -32,81 +31,35 @@
 
         <div id="listaDeFilmes">
             <ul id="lista">
-                <li><img
-                        src="https://m.media-amazon.com/images/M/MV5BMTEzNjkwMzIyMjZeQTJeQWpwZ15BbWU4MDI2NTU5ODYx._V1_SX300.jpg">
-                </li>
-                <li><img
-                        src="https://m.media-amazon.com/images/M/MV5BMTYzNDM0ODQxMF5BMl5BanBnXkFtZTcwOTMyMzMzMg@@._V1_SX300.jpg">
-                </li>
-                <li><img
-                        src="https://m.media-amazon.com/images/M/MV5BMTUwOTgzMTEyOF5BMl5BanBnXkFtZTgwNTk3MTM5MjI@._V1_SX300.jpg">
-                </li>
-                <li><img
-                        src="https://m.media-amazon.com/images/M/MV5BZTJiZjFkNmYtNmU3My00MmE1LWI4YWEtNWFkZDJiOTgwMTNkXkEyXkFqcGdeQXVyMTg0MTI3Mg@@._V1_SX300.jpg">
-                </li>
-                <li><img src=""></li>
-                <li><img src=""></li>
-                <li><img src=""></li>
-                <li><img src=""></li>
-                <li><img src=""></li>
-                <li><img src=""></li>
-                <li><img src=""></li>
-                <li><img src=""></li>
-                <li><img src=""></li>
 
             </ul>
         </div>
     </div>
-    <script src="../js/teste.js"></script>
 
+    <footer>
 
+        <p>Duvidas? Ligue: 4002-8922</p>
 
-    <div id="listaDeFilmes">
-        <ul id="lista">
-            <!-- <li><img src= "https://m.media-amazon.com/images/M/MV5BMTEzNjkwMzIyMjZeQTJeQWpwZ15BbWU4MDI2NTU5ODYx._V1_SX300.jpg"></li>
-            <li><img src="https://m.media-amazon.com/images/M/MV5BMTYzNDM0ODQxMF5BMl5BanBnXkFtZTcwOTMyMzMzMg@@._V1_SX300.jpg"></li> 
-            <li><img src="https://m.media-amazon.com/images/M/MV5BMTUwOTgzMTEyOF5BMl5BanBnXkFtZTgwNTk3MTM5MjI@._V1_SX300.jpg"></li>
-            <li><img src="https://m.media-amazon.com/images/M/MV5BZTJiZjFkNmYtNmU3My00MmE1LWI4YWEtNWFkZDJiOTgwMTNkXkEyXkFqcGdeQXVyMTg0MTI3Mg@@._V1_SX300.jpg"></li>
-            <li><img src=""></li>
-            <li><img src=""></li>
-            <li><img src=""></li>
-            <li><img src=""></li>
-            <li><img src=""></li>
-            <li><img src=""></li>
-            <li><img src=""></li>
-            <li><img src=""></li>
-            <li><img src=""></li> -->
+        <ul>
+            <li><a href="./equipe.html">
+                    <p>Equipe</p>
+                </a></li>
+            <li>
+                <p>Fale conosco</p>
+            </li>
+            <li>
+                <p>Termos de uso</p>
+            </li>
+        </ul>
 
-        </ul> 
-    </div>
-</div>
+    </footer>
 
- <div id ="footer">
-<footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
-    <p>Duvidas? Ligue: 4002-8922</p>
+    <script src="../src/model/model.js"></script>
+    <script src="../src/view/view.js"></script>
+    <script src="../src/controller/controller.js"></script>
 
-    <ul class="nav flex-column">
-        <li class="nav-item mb-2"><a href="./equipe.html" class="nav-link p-0">Equipe</a>
-        </li>
-        <li class="nav-item mb-2"><a
-                href="http://comercial.recordtv.com.br/programacao-nacional/fala-que-eu-te-escuto/" target="_blank"
-                class="nav-link p-0">Fale Conosco</a></li>
-        <li class="nav-item mb-2"><a href="https://help.netflix.com/pt/legal/termsofuse/" target="_blank" class="nav-link p-0">Termos de Uso</a></li>
-    </ul>
-
-</footer>
-</div>
-
-<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-
-
-<!-- <script src="../js/teste.js"></script> -->
-<script src="../src/model/model.js"></script>
-<script src="../src/view/view.js"></script>
-<script src="../src/controller/controller.js"></script>
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
 
