--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -78,7 +78,7 @@
 
     <!-- Optional JavaScript -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="../js/main.js"></script>
+    <script src="../src/controller/validateEmail.js"></script>
 
 
     <!-- Bootstrap Bundle with Popper -->
