--- a/assets/pages/pesquisaFilmes.html
+++ b/assets/pages/pesquisaFilmes.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/components.css">
     <link rel="stylesheet" href="../css/pesquisaFilmes.css  ">
+    <link rel="stylesheet" href="../css/modal.css">
 
 
     <title>ResiliaFlix</title>
@@ -36,6 +37,37 @@
         </div>
     </div>
 
+    <!-- MODAL -->
+    <div class="modal fade" id="filmeModalHome" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+        <div class="modal-dialog">
+
+            <div class="modal-content">
+                <div class="modal-header"></div>
+
+                <div class="modal-body">
+
+                    <div id="filmePosterModal"></div>
+
+                    <div id="filmeInfoModal">
+
+                        <div id="filmeNotaModal"></div>
+
+                        <div id="filmeSinopseModal"></div>
+
+                        <hr>
+
+                        <div id="outrosFilmeModal"></div>
+
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
     <footer>
 
         <p>Duvidas? Ligue: 4002-8922</p>
@@ -54,13 +86,20 @@
 
     </footer>
 
+
+    
+
+
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+
 
     <script src="../src/model/model.js"></script>
     <script src="../src/view/view.js"></script>
     <script src="../src/controller/controller.js"></script>
+    <script src="../js/modal.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    
 </body>
 
 </html>
