--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
                 <h1>Filmes ruins para <br> pessoas com gosto duvidoso!</h1>
                 <p>Assista quando quiser e cancele a qualquer hora!</p>
 
-                <form id="formIntro">
+                <div id="formIntro">
 
                     <p>Gostou ? Digite abaixo seu email para iniciar ou renovar sua assinatura.</p>
 
                     <fieldset>
                         <input type="text" id="emailField" name="emailField" required
                             placeholder="Digite seu email aqui">
-                        <button onclick="cadastrar()" class="btnCadastrar">Cadastre-se</button>
+                        <button type="button" onclick="homeCadastrarBtn()" class="btnCadastrar">Cadastre-se</button>
                     </fieldset>
 
-                </form>
+                </div>
             </div>
 
         </section>
@@ -499,14 +499,14 @@
             </div>
             <div class="row">
                 <div class="col-md-3">
-                    <form class="form">
+                    <div class="form">
                         <div class="d-flex flex-column">
-                            <input id="newsletter1" type="text" class="form-control formCadastrar"
+                            <input id="email" type="text" class="form-control formCadastrar"
                                 placeholder="Digite aqui seu email">
-                            <button onclick="cadastrar()" class="btn btn-primary btnCadastrar" type="button">Cadastre-se
+                            <button type="button" onclick="homeCadastrarBtn()" class="btn btn-primary btnCadastrar" >Cadastre-se
                                 > </button>
                         </div>
-                    </form>
+                    </div>
                 </div>
                 <div class="col-md-2 ">
                     <p>Dúvidas? Ligue 4002-8922</p>
@@ -561,8 +561,9 @@
 
     <!-- Optional JavaScript -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="./assets/js/main.js"></script>
+    <script src="./assets/src/controller/redirecionarCaminhos.js"></script>
     <script src="./assets/js/modal.js"></script>
+    <script src="./assets/js/carousel.js"></script>
 
 
     <!-- Bootstrap Bundle with Popper -->
