mudado caminho do header na equipe

--- a/assets/pages/equipe.html
+++ b/assets/pages/equipe.html
@@ -34,7 +34,7 @@
 
     <header>
         <nav>
-            <a href="../index.html">RESILIAFLIX</a>
+            <a href="../../index.html">RESILIAFLIX</a>
 
         </nav>
 
